// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly message for 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense
     with total value of 
    $1.95
  </h1>
</div>
`;

exports[`should render correctly message for 2 expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     expense
    s
     with total value of 
    $21.45
  </h1>
</div>
`;
